--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Shen</span>
                     </h1>
                     <div class="subheading mb-5">
-                        182 Peach Ter · Santa Cruz, CA 95060 · (530) 400-9024 ·
+                        236 Grandview Street · Santa Cruz, CA 95060 · (530) 400-9024 ·
                         <a href="jshen30@ucsc.edu">jshen30@ucsc.edu</a>
                     </div>
                     <p class="lead mb-5">I am a M.S. student in Computer Science and Engineering at University of California, Santa Cruz.</p>
@@ -89,7 +89,7 @@
                             <h3 class="mb-0">University of California, Santa Cruz</h3>
                             <div class="subheading mb-3">Master of Science</div>
                             <div>Computer Science and Engineering</div>
-                            <p>GPA: </p>
+                            <p>GPA: 3.82</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2021 - Present</span></div>
                     </div>
