--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
                         <span class="text-primary">Shen</span>
                     </h1>
                     <div class="subheading mb-5">
-                        236 Grandview Street · Santa Cruz, CA 95060 · (530) 400-9024 ·
+                        2197 Arroyo CT, Apt 2 · Santa Cruz, CA 95060 · (530) 400-9024 ·
                         <a href="jshen30@ucsc.edu">jshen30@ucsc.edu</a>
                     </div>
-                    <p class="lead mb-5">I am a M.S. student in Computer Science and Engineering at University of California, Santa Cruz.</p>
+                    <p class="lead mb-5">I am a M.S. graduated student in Computer Science and Engineering at University of California, Santa Cruz.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jinghao-shen-b333401b0/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/jshen1s1"><i class="fab fa-github"></i></a>
-                        <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a> -->
                         <a class="social-icon" href="https://www.facebook.com/profile.php?id=100021962303074"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
@@ -65,7 +64,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Front-end Summer Intern</h3>
                             <div class="subheading mb-3">HiScene Information Technology Company</div>
-                            <p>Develop the front-end for advertisements on the Mobile terminal.</p>
+                            <p>Developed the front-end of the advertisement pages on the Mobile terminal.</p>
+                            <p>Based on the UI design, adjusted the color and position of elements using <b>CSS</b>.</p>
+                            <p>Developed interactable customer interfaces using <b>Javascript</b>.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2018 - August 2018</span></div>
                     </div>
@@ -73,7 +74,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Back-end Summer Intern</h3>
                             <div class="subheading mb-3">Hangzhou Haixingshuyuan Technology Company</div>
-                            <p>Set up a community service database for a Mobile application.</p>
+                            <p>Developed a community service database for a Mobile application using <b>SQL</b>.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2016 - August 2016</span></div>
                     </div>
@@ -89,9 +90,9 @@
                             <h3 class="mb-0">University of California, Santa Cruz</h3>
                             <div class="subheading mb-3">Master of Science</div>
                             <div>Computer Science and Engineering</div>
-                            <p>GPA: 3.85</p>
+                            <p>GPA: 3.82</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - June 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -124,6 +125,9 @@
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
                         <li class="list-inline-item"><i class="fas fa-database"></i></li>
+                        <li class="list-inline-item"><i class="devicon-pytorch-plain-wordmark colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-numpy-original-wordmark colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-mysql-plain-wordmark colored"></i></li>
                     </ul>
                     <!--<div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
