--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://kit.fontawesome.com/ee30be9076.js" crossorigin="anonymous"></script>
         <!-- Devicon font icons CSS-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" />
         <!--<link rel="stylesheet" href="css/devicon.min.css">-->
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
